enhance sequence op

--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
         h1{text-align:center;color:hotpink;font-weight:bold;}
         fieldset{margin-bottom:1rem;}
         legend{font-size:20px;font-weight:bold;}
-        input select {background-color:hotpink;font-size:18px}
         .hilite{background-color:hotpink;}
         .grid{display:flex;flex-wrap:wrap;flex-flow:row wrap;justify-content:center;align-items:center;}
         .grid-item{display:flex;align-items:center;justify-content:space-around;margin:4px;border:1px solid hotpink;border-radius:8px;text-align:center;height:60px;flex-basis:9%;}
         @media(max-width:1047px){.grid-item{flex-basis:8.5%;}}        
         @media(max-width:714px){.grid-item{flex-basis:8%;}}        
         @media(max-width:547px){.grid-item{flex-basis:7.5%;}}        
-        @media(max-width:447px){.grid-item{flex-basis:14.5%;}button{width:100%}} 
-        button, select{background-color:hotpink;font-size:18px;margin:4px;padding-top:2px;border:none;border-bottom:solid 3px rgb(252, 0, 126);}
+        @media(max-width:447px){.grid-item{flex-basis:14.5%;}button,select{width:100%!important}} 
+        button,select{background-color:hotpink;font-size:18px;margin:4px;padding-top:2px;border:none;border-bottom:solid 3px rgb(252, 0, 126);}
         select {
             width:140px;
             height: 27.5px;
