--- a/index.html
+++ b/index.html
@@ -5,28 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Vue JS Number Grid</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">     -->
     <script src="https://unpkg.com/vue@next" defer></script>
     <script src="app.js" defer></script>    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
-    <style>
-        body{font-family:'Roboto',sans-serif;font-size:18px}
-        h1{text-align:center;color:hotpink;font-weight:bold;}
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">   
+    <link href="/projects/css/reset.css" rel="stylesheet">   
+    <style>      
+        body{font-family:'Roboto',sans-serif;font-size:1em}
+        h1{font-family:'Righteous',sans-serif;text-align:center;color:orange;font-weight:bold;font-size:2.5em;margin-bottom:0;text-shadow: 2px 2px 2px rgb(252, 0, 126);}
+        .ops-container{display:inline-block;width:100%;}
+        .right{float:right;}
+        .left{float:left;}
         fieldset{margin-bottom:1rem;}
-        legend{font-size:20px;font-weight:bold;}
-        .hilite{background-color:hotpink;}
+        legend{font-size:1.5em;font-weight:bold;}
+        .hilite{background-color:orange;}
         .grid{display:flex;flex-wrap:wrap;flex-flow:row wrap;justify-content:center;align-items:center;}
-        .grid-item{display:flex;align-items:center;justify-content:space-around;margin:4px;border:1px solid hotpink;border-radius:8px;text-align:center;height:60px;flex-basis:9%;}
+        .grid-item{display:flex;align-items:center;justify-content:space-around;margin:4px;border:1px solid orange;border-radius:8px;text-align:center;height:60px;flex-basis:9%;}
         @media(max-width:1047px){.grid-item{flex-basis:8.5%;}}        
-        @media(max-width:714px){.grid-item{flex-basis:8%;}}        
+        @media(max-width:714px){.grid-item{flex-basis:8%;}button,select{width:100%!important;text-align:left;}.grid-item{font-size:smaller!important}h1{display:table-caption;text-align:left!important;margin-bottom:.5em;}.left{float:none;}.right{float:none;}}        
         @media(max-width:547px){.grid-item{flex-basis:7.5%;}}        
-        @media(max-width:447px){.grid-item{flex-basis:14.5%;}button,select{width:100%!important}} 
-        button,select{background-color:hotpink;font-size:18px;margin:4px;padding-top:2px;border:none;border-bottom:solid 3px rgb(252, 0, 126);}
+        @media(max-width:447px){.grid-item{flex-basis:14.5%;}} 
+        input,select,textarea,button{font-family:inherit;font-size:inherit;background-color:orange;margin:4px;padding-top:2px;border:none;border-bottom:solid 3px rgb(252, 0, 126);vertical-align:top;}
+        button{height:27px;}
         select {
             width:140px;
-            height: 27.5px;
+            height: 27px;
             padding: 0 6px;
             -webkit-appearance:none;
             -moz-appearance:none;
@@ -46,7 +50,8 @@
     <div id="app">
         <fieldset>
             <legend>Operations</legend> 
-            <div>
+            <div class="ops-container">          
+            <div class="left">
                 <button @click="showPrimes()">Primes</button>      
                 <button @click="showFibos(10)">Fibonacci's</button>      
                 <button @click="showOrdinals()">Ordinals</button>      
@@ -56,13 +61,14 @@
                     <option v-for="i in 10" :key="i">{{i}}</option>
                 </select>   
             </div>
+            <div class="right"><button @click="reset()">Reset</button></div>
         </fieldset>
         <div id="grid">
             <div>
                 <fieldset>
                     <legend>Grid</legend>     
                     <div class="row grid">
-                        <div v-for="number in gridNum" class="col-sm-1 offset-sm-1 grid-item" :style="{backgroundColor: number.hilite ? 'hotpink' : '#fff'}">{{ number.id }}</div>
+                        <div v-for="number in gridNum" class="col-sm-1 offset-sm-1 grid-item" :style="{backgroundColor: number.hilite ? 'orange' : '#fff'}">{{ number.id }}</div>
                     </div>
                 </fieldset>   
             </div> 
