--- a/index.html
+++ b/index.html
@@ -11,37 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">   
     <link href="/projects/css/reset.css" rel="stylesheet">   
-    <style>      
-        body{font-family:'Roboto',sans-serif;font-size:1em}
-        h1{font-family:'Righteous',sans-serif;text-align:center;color:orange;font-weight:bold;font-size:2.5em;margin-bottom:0;text-shadow: 2px 2px 2px rgb(252, 0, 126);}
-        .ops-container{display:inline-block;width:100%;}
-        .right{float:right;}
-        .left{float:left;}
-        fieldset{margin-bottom:1rem;}
-        legend{font-size:1.5em;font-weight:bold;}
-        .hilite{background-color:orange;}
-        .grid{display:flex;flex-wrap:wrap;flex-flow:row wrap;justify-content:center;align-items:center;}
-        .grid-item{display:flex;align-items:center;justify-content:space-around;margin:4px;border:1px solid orange;border-radius:8px;text-align:center;height:60px;flex-basis:9%;}
-        @media(max-width:1047px){.grid-item{flex-basis:8.5%;}}        
-        @media(max-width:714px){.grid-item{flex-basis:8%;}button,select{width:100%!important;text-align:left;}.grid-item{font-size:smaller!important}h1{display:table-caption;text-align:left!important;margin-bottom:.5em;}.left{float:none;}.right{float:none;}}        
-        @media(max-width:547px){.grid-item{flex-basis:7.5%;}}        
-        @media(max-width:447px){.grid-item{flex-basis:14.5%;}} 
-        input,select,textarea,button{font-family:inherit;font-size:inherit;background-color:orange;margin:4px;padding-top:2px;border:none;border-bottom:solid 3px rgb(252, 0, 126);vertical-align:top;}
-        button{height:27px;}
-        select {
-            width:140px;
-            height: 27px;
-            padding: 0 6px;
-            -webkit-appearance:none;
-            -moz-appearance:none;
-            appearance:none;
-            background-image:url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20height%3D%2212%22%20viewBox%3D%220%200%2012%2012%22%3E%3Ctitle%3Edown-arrow%3C%2Ftitle%3E%3Cg%20fill%3D%22%23000000%22%3E%3Cpath%20d%3D%22M10.293%2C3.293%2C6%2C7.586%2C1.707%2C3.293A1%2C1%2C0%2C0%2C0%2C.293%2C4.707l5%2C5a1%2C1%2C0%2C0%2C0%2C1.414%2C0l5-5a1%2C1%2C0%2C1%2C0-1.414-1.414Z%22%20fill%3D%22%23000000%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fsvg%3E");
-            background-size:.75em;
-            background-position:calc(100% - .5em) center;
-            background-repeat:no-repeat;
-        }
-        select::-ms-expand {display: none;}
-    </style> 
+    <link href="css/local-styles.css" rel="stylesheet">   
 </head>
 <body>
     <header>
