--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <link href="css/local-styles.css" rel="stylesheet">   
 </head>
 <body>
-    <header>
-        <h1>Magic Number Grid</h1>
-    </header>
     <div id="app">
-        <div id="docs">{{ docs }}</div>
+        <header>
+            <h1 :class="getColorClass">Magic Number Grid</h1>
+        </header>
+        <div v-html="docs"></div>
         <div class="trans-top"></div>
-        <fieldset style="background-color:rgba(255,255,255,.825)!important">
-            <legend>Operations</legend> 
+        <fieldset :class="getColorClass" style="background-color:rgba(255,255,255,.825)!important">
+            <legend :class="getColorClass">Operations</legend> 
             <div class="ops-container">          
-            <div class="left">
+            <div class="left getColorClass">
                 <button @click="showSquares()">Square</button>  
                 <button @click="showPrimes()">Prime</button>      
                 <button @click="showFibos(10)">Fibonacci</button>      
@@ -35,17 +35,19 @@
                 </select>   
             </div>
             <div class="right"><button @click="reset()">Reset</button></div>
-            <div class="right"><button @click="showDocs()">Documentation</button></div>
+            <div class="right"><button @click="showDocs(docs)">{{docs?'Hide':'Show'}} Docs</button></div>
+            <select name="colors" id="colors" @change="changeColors($event, $event.target.selectedIndex)">
+                <option value="0">Colors</option>
+                <option v-for="color in colors">{{color.primary}}/{{color.secondary}}</option>
+            </select>             
         </fieldset>
         <div id="grid">
-            <div>
-                <fieldset style="background-color:rgba(255,255,255,.825)!important">
-                    <legend>Grid</legend>     
-                    <div class="row grid">
-                        <div v-for="number in gridNum" class="col-sm-1 offset-sm-1 grid-item" :style="{backgroundColor: number.hilite ? 'orange' : '#fff'}">{{ number.id }}</div>
-                    </div>
-                </fieldset>   
-            </div> 
+            <fieldset :class="getColorClass" style="background-color:rgba(255,255,255,.825)!important">
+                <legend :class="getColorClass">Grid</legend>     
+                <div class="getColorClass row grid">
+                    <div v-for="number in gridNum" class="col-sm-1 offset-sm-1 grid-item" :style="{backgroundColor: number.hilite ? 'orange' : '#fff'}">{{ number.id }}</div>
+                </div>
+            </fieldset>   
         </div>
         <div class="trans-bottom"></div>
     </div>
