reset working minus changing color selector to 0

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
                     <option v-for="i in 10" :key="i">{{i}}</option>
                 </select>   
             </div>
-            <div class="right"><button @click="reset()">Reset</button></div>
+            <div class="right"><button @click="reset(false,false)">Reset</button></div>
             <div class="right"><button @click="showDocs(docs)">{{docs?'Hide':'Show'}} Docs</button></div>
             <div class="right">
                 <select name="colors" @change="changeColors($event, $event.target.selectedIndex)">
+                    <option value="0">Colors</option>
                     <option v-for="color in colors">{{color.primary}}/{{color.secondary}}</option>
                 </select>             
             </div>    
@@ -46,7 +47,7 @@
             <fieldset :class="getColorClass" style="background-color:rgba(255,255,255,.825)!important">
                 <legend :class="getColorClass">Grid</legend>     
                 <div class="getColorClass row grid">
-                    <div v-for="number in gridNum" class="col-sm-1 offset-sm-1 grid-item" :class="getColorClass" :style="getColorStyle(number)">{{ number.id }}</div>
+                    <div v-for="number in gridNum" class="col-sm-1 offset-sm-1 grid-item" :class="getColorClass" style="background-color:silver" :style="getColorStyle(number)">{{ number.id }}</div>
                 </div>
             </fieldset>   
         </div>
