--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="descriptiom" content="Portfolio excersize/demo for Vue.js">
     <title>Magic Number Grid (simple Vue.js)</title>
     <script src="https://unpkg.com/vue@next" defer></script>
     <script src="app.js" defer></script>    
