edit title and add todos

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- 
+TO DO:
+☑ Add logo
+☑ Make color pickers instead of select
+☑ Put all ops into a select
+☑ Add more ops
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="descriptiom" content="Portfolio excersize/demo for Vue.js">
-    <title>Magic Number Grid (simple Vue.js)</title>
+    <title>Magic Number Grid (simple Vue.js) - The Art of Tech, LLC. Projects</title>
     <script src="https://unpkg.com/vue@next" defer></script>
     <script src="app.js" defer></script>    
     <link rel="preconnect" href="https://fonts.googleapis.com">
