add text shadow for gray title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- 
 TO DO:
 ☑ Make color pickers instead of select
+☑ Rotate different bg images
 ☑ Put all ops into a select
 ☑ Add more ops
 -->
