--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ TO DO:
 <body>
     <div id="app">            
         <header>
-            <img src="/projects/site-images/logo-325.png" width="60" height="60" alt="Art of Tech Business logo">
+            <img src="../../site-images/logo-325.png" width="60" height="60" alt="Art of Tech Business logo">
             <h1 :class="getColorClass">Magic Number Grid</h1>
         </header>            
         <div class="bc-div">
             <ul class="breadcrumbs">
-                <li></li><a href="/">Home</a></li>
-                <li> | <a href="/projects/index.html">Projects</a></li>
+                <li></li><a href="//theartoftechllc.com">Home</a></li>
+                <li> | <a href="/">Projects</a></li>
             </ul>
         </div>
         <div class="trans-top"></div>
