fix favicon and add link to no-bg and lighten breadcrumbs

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@ TO DO:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="descriptiom" content="Portfolio excersize/demo for Vue.js">
     <title>Magic Number Grid (simple Vue.js) - The Art of Tech, LLC. Projects</title>
-    <script src="https://unpkg.com/vue@next" defer></script>
-    <script src="app.js" defer></script>    
+    <link rel="icon" href="../favicon.ico?v=1.0" />    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Paytone+One&family=Russo+One&family=Fugaz+One&family=Roboto&display=swap" rel="stylesheet">
     <link href="css/local-styles.css" rel="stylesheet">   
+    <script src="https://unpkg.com/vue@next" defer></script>
+    <script src="app.js" defer></script>    
 </head>
 <body>
     <div id="app">            
