--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ TO DO:
 <body>
     <div id="app">            
         <header>
-            <img src="../../site-images/logo-325.png" width="60" height="60" alt="Art of Tech Business logo">
+            <img id="logo" src="../../site-images/logo-325.png" width="60" height="60" alt="Art of Tech Business logo">
             <h1 :class="getColorClass">Magic Number Grid</h1>
         </header>            
         <div class="bc-div">
