tweak breadcrumbs once more

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ TO DO:
             <img id="logo" src="../../site-images/logo-325.png" width="60" height="60" alt="Art of Tech Business logo">
             <h1 :class="getColorClass">Magic Number Grid</h1>
         </header>            
-        <fieldset :class="getColorClass" class="bc-div">
+        <div :class="getColorClass" class="bc-div">
             <ul class="breadcrumbs">
                 <li></li><a href="//theartoftechllc.com">Home</a></li>
                 <li> | <a href="/">Projects</a></li>
             </ul>
-        </fieldset>
+        </div>
         <div class="trans-top"></div>
         <div id="doc-div" class="hide" :class="{show: docs}">
             <fieldset :class="getColorClass">
