--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!-- 
+<!--
 TO DO:
 ☑ Make color pickers instead of select
 ☑ Rotate different bg images
-☑ Put all ops into a select
 ☑ Add more ops
 -->
 <!DOCTYPE html>
@@ -13,56 +12,57 @@ TO DO:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="descriptiom" content="Portfolio excersize/demo for Vue.js">
     <title>Magic Number Grid (simple Vue.js) - The Art of Tech, LLC. Projects</title>
-    <link rel="icon" href="../favicon.ico?v=1.0" />    
+    <link rel="icon" href="../favicon.ico?v=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Paytone+One&family=Russo+One&family=Fugaz+One&family=Roboto&display=swap" rel="stylesheet">
-    <link href="/css/global-styles.css" rel="stylesheet">   
-    <link href="css/local-styles.css" rel="stylesheet">   
+    <link href="/css/global-styles.css" rel="stylesheet">
+    <link href="css/local-styles.css" rel="stylesheet">
     <script src="https://unpkg.com/vue@next" defer></script>
-    <script src="app.js" defer></script>    
+    <script src="app.js" defer></script>
 </head>
 <body>
-    <div id="app">            
-        <!--#include virtual="/includes/header.html"--> 
-        <div id="doc-div" class="hide" :class="{show: docs}">
+    <div id="app">
+        <!--#include virtual="/includes/vue-number-grid-header.html"-->
+        <div id="doc-div" class="hide" :class="{show: docs}" title="Help is here.">
             <fieldset :class="getColorClass">
                 <legend :class="getColorClass">{{ docuLegend }}</legend>
                 <p v-html="docs"></p>
             </fieldset>
         </div>
-        <fieldset :class="getColorClass" style="background-color:rgba(255,255,255,.65)!important">
-            <legend :class="getColorClass">Operations</legend> 
-            <div class="ops-container">          
+        <fieldset :class="getColorClass" style="background-color:rgba(255,255,255,.65)!important" title="Do stuff.">
+            <legend :class="getColorClass">Operations</legend>
+            <div class="ops-container">
             <div class="left" :class="getColorClass">
-                <button @click="showSquares()">Square</button>  
-                <button @click="showPrimes()">Prime</button>      
-                <button @click="showFibos(10)">Fibonacci</button>      
-                <button @click="showOrdinals()">Ordinal</button>      
-                <button @click="showRoman()">Roman</button>  
-                <select name="sequence" id="sequence" @change="showSequence()" v-model="sequenceIndex">
-                    <option value="0">Sequence</option>
+                <select name="ops" id="ops" @change="showOps()" v-model="opsIndex" title="You have to choose an action!">
+                    <option value="-1">Choose Operation...</option>
+                    <option v-for="op in ops" :value="op.index">{{op.operation}}</option>
+                </select>
+                <button id="repeatRand" :class="getRandDisplay" @click="showRandom()" title="lather, rinse, repeat...">+</button>
+                <button id="clearRand" :class="setRandDisplay" @click="hideRandom()" title="clear random numbers...">-</button>
+                <select name="sequence" id="getSequence" @change="showSequence()" v-model="sequenceIndex" :class="getSeqDisplay">
+                    <option value="0">Seed Number...</option>
                     <option v-for="i in 10" :key="i">{{i}}</option>
-                </select>   
+                </select>
             </div>
-            <div class="right"><button @click="reset(false,false,false)">Reset</button></div>
-            <div class="right"><button @click="showDocs(docs)">{{docs?'Hide':'Show'}} Docs</button></div>
+            <div class="right"><button @click="reset(false,false,false)" title="Start over.">Reset</button></div>
+            <div class="right"><button @click="showDocs(docs)" title="Can I get some help?">{{docs?'Hide':'Show'}} Docs</button></div>
             <div class="right">
-                <select name="colors" @change="changeColors($event, $event.target.selectedIndex)" v-model="colorIndex">>
+                <select name="colors" @change="changeColors($event, $event.target.selectedIndex)" v-model="colorIndex" title="Jazz it up!!!">
                     <option value="-1">Choose colors...</option>
                     <option v-for="color in colors" :value="color.index">{{color.primary}}/{{color.secondary}}</option>
-                </select>             
-            </div>    
+                </select>
+            </div>
         </fieldset>
         <div id="grid">
-            <fieldset :class="getColorClass" style="background-color:rgba(255,255,255,.65)!important">
-                <legend :class="getColorClass">Grid</legend>     
+            <fieldset :class="getColorClass" style="background-color:rgba(255,255,255,.65)!important" title="Where the results are.">
+                <legend :class="getColorClass">Grid</legend>
                 <div class="getColorClass row grid">
                     <div v-for="number in gridNum" class="col-sm-1 offset-sm-1 grid-item" :class="getColorClass" style="background-color:silver" :style="getColorStyle(number)">{{ number.id }}</div>
                 </div>
-            </fieldset>   
+            </fieldset>
         </div>
     </div>
-    <!--#include virtual="/includes/footer.html"-->  
+    <!--#include virtual="/includes/footer.html"-->
 </body>
 </html>
