--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ TO DO:
             </fieldset>
         </div>
         <fieldset :class="getColorClass" style="background-color:rgba(255,255,255,.65)!important" title="Do stuff.">
-            <legend :class="getColorClass">Operations</legend>
+            <legend :class="getColorClass">Functions</legend>
             <div class="ops-container">
             <div class="left" :class="getColorClass">
                 <select name="ops" id="ops" @change="showOps()" v-model="opsIndex" title="You have to choose an action!">
