--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ TO DO:
     <script src="https://unpkg.com/vue@next" defer></script>
     <script src="app.js" defer></script>
 </head>
-<body id="app" :style="{'background-color': colorIndex===-1?colors[colorIndex+1].primary:colors[colorIndex].primary}">
+<body id="app" :style="{'background-color': colorIndex===-1?colors[colorIndex+1].primary:colors[colorIndex].primary}'!important'">
     <div :style="{'background-color': colorIndex===-1?colors[colorIndex+1].primary:colors[colorIndex].primary}">
         <!--#include virtual="/includes/vue-number-grid-header.html"-->
         <div id="doc-div" :class="['hide', {show: docs}]" title="Help is here.">
